<resources>
    <string name="app_name">فروشگاه آنلاین</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hint1">کلمه عبور</string>
    <string name="title_activity_login">ورود به فروشگاه</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="btnLogin">ورود</string>
    <string name="msgEnterUser">لطفا نام کاربری و رمز عبور را وارد نمایید</string>
    <string name="msgBadPass">رمزعبور باید حداقل 4 کاراکتر باشد</string>
    <string name="title_activity_register">ثبت نام</string>
    <string name="hintUsername">نام کاربری</string>
    <string name="hintPass">کلمه عبور</string>
    <string name="hintRePass">تکرار کلمه عبور</string>
    <string name="hintEmail">ایمیل</string>
    <string name="btnReg">ثبت نام</string>
    <string name="msgEnterData">نام کاربری و رمز عبور بایستی حداقل 4 کاراکتر باشد</string>
    <string name="msgEnterEmail">لطفا ایمیل خود را وارد نمایید</string>
    <string name="msgPassNotSame">کلمه عبور با تکرار آن همخوانی ندارد</string>
    <string name="registerDone">ثبت نام شما با موفقیت انجام شد</string>
    <string name="registerError">خطایی در ثبت نام رخ داد ، مجدد سعی نمایید</string>
    <string name="welcome">کاربر عزیز خوش آمدید</string>
    <string name="invalidLogin">نام کاربری یا کلمه عبور صحیح نیست</string>
    <string name="btnLogout">خروج</string>
    <string name="lbPrice">قیمت :</string>
    <string name="title_activity_product_detail">جزئیات محصول</string>
    <string name="addedToBasket">کالا به سبد خرید افزوده شد</string>
    <string name="saveOrder">ثبت سفارش</string>
    <string name="orderDone">سفارش با موفقیت ثبت شد</string>
    <string name="title_activity_profile">پروفایل</string>
    <string name="lbAddress">آدرس پستی</string>
    <string name="lbPhone">شماره موبایل</string>
    <string name="btnSave">ذخیره تغییرات</string>
    <string name="profileSaved">تغییرات پروفایل ذخیره گردید</string>
    <string name="msgNotFound">جستجوی شما نتیجه ای در برنداشت</string>
    <string name="action_orders">سفارشات من</string>
    <string name="title_activity_my_orders">سفارشات من</string>
    <string name="lbOrderId">شناسه سفارش :</string>
    <string name="lbOrderDate">تاریخ سفارش :</string>
    <string name="lbOrderStatus">وضعیت :</string>
    <string name="btnShowDetail">نمایش جزئیات</string>
    <string name="lbCount">تعداد :</string>
    <string name="title_activity_about_us">درباره ما</string>
    <string name="action_aboutus">درباره ما</string>
    <string name="titleSupport">پشتیبانی</string>
    <string name="lbSupport1">راههای ارتباط با ما</string>
    <string name="action_support">پشتیبانی</string>
    <string name="title_activity_basket">سبد خرید</string>
</resources>
