<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_basket"
        android:title=""
        app:showAsAction="always"
        android:icon="@drawable/ic_shopping_basket_24dp"/>
    <item android:id="@+id/action_search"
        android:title="Search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/action_Orders"
        android:orderInCategory="100"
        android:title="@string/action_orders"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_AboutUs"
        android:orderInCategory="101"
        android:title="@string/action_aboutus"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_support"
        android:orderInCategory="102"
        android:title="@string/action_support"
        app:showAsAction="never" />
</menu>
