<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layoutDirection="rtl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:layoutDirection="rtl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            style="@style/lbItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbOrderId" />

        <TextView
            android:id="@+id/tvOrderId"
            style="@style/tvInfoItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|end"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">
        <TextView
            style="@style/lbItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbOrderDate" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tvInfoItem"
            android:layout_weight="1"
            android:gravity="right|end"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">
        <TextView
            style="@style/lbItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbOrderStatus" />

        <TextView
            android:id="@+id/tvOrderStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/tvInfoItem"
            android:gravity="left|start"
            android:text="TextView" />
        <ImageView
            android:id="@+id/ivStatus"
            android:src="@drawable/ic_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnShowDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/btnShowDetail" />
        <ProgressBar
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" />
        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="56dp"
            android:layout_height="56dp" />
        <TextView
            android:id="@+id/tvProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/tvInfoItem"
            android:gravity="left|start"
            android:text="" />

    </LinearLayout>
</LinearLayout>
</androidx.cardview.widget.CardView>